# piosenka

./: .gcloudignore  .gitattributes  .gitignore  .style.yapf  .travis.yml  .vimrc  AGENTS.md  DEPS  README.md  app.yaml  bootstrap-config.json  build.sh  coverage3.sh  deploy-firebase.sh  deploy.sh  firebase.json  fix.sh  main.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  restore.txt  server_requirements.txt  settings.py  settings_local_template.py  stats.sh  tmuxp.yaml  urls.py
articles/: admin.py  forms.py  mentions.py  models.py  test_article.py  test_models.py  test_urls.py  tests.py  urls.py  views.py
artists/: admin.py  models.py
base/: overrides.py  testing.py
blog/: admin.py  forms.py  models.py  test_post.py  test_urls.py  urls.py  views.py
client/: README.md  package.json  webpack-stats.json  webpack.config.js
content/: generic_tests.py  mixins.py  models.py  scenarios.py  slug.py  test_models.py  test_trevor.py  trevor.py  url_scheme.py  views.py
events/: admin.py  fb_import.py  forms.py  mixins.py  models.py  test_event.py  test_index.py  test_urls.py  urls.py  views.py  widgets.py
frontpage/: admin.py  context.py  index.py  models.py  render.py  trevor.py  views.py
index/: _MAIN_0.toc
piosenka/: admin.py  context_processors.py  debug.py  forms.py  index.py  inspect.py  inspect_urls.py  lyrics.py  mail.py  middleware.py  mixins.py  models.py  settings.py  settings_local_template.py  settings_production_template.py  test_debug.py  test_inspect.py  test_invitations.py  test_mails.py  test_models.py  testing.py  (+8 more)
(+1704 files in other folders)
